# robot

./: .gitignore~  LICENSE.md  LICENSE.md~  README.md  README.md~  all.launch~  extract1.launch~  test1.launch~
attention_tracker/: CMakeLists.txt~  README.md  README.md~  estimate  estimate_focus  head_pose_single_frame  head_pose_test
attention_tracker/launch/: attention_tracking.launch  attention_tracking.launch~
attention_tracker/src/: estimate_focus.cpp  estimate_focus.cpp~  head_pose_estimation.cpp  head_pose_estimation.cpp~  head_pose_estimation.hpp  head_pose_estimation.hpp~  head_pose_estimation_ros.cpp  head_pose_estimation_ros.cpp~  publisher.cpp~  ros_head_pose_estimator.cpp  ros_head_pose_estimator.cpp~  ros_head_pose_estimator.hpp~  withmeness.py
gscam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gscam/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
gscam/src/: gscam.cpp  gscam.cpp~
laserscan/: CMakeLists.txt~  laser_config.yaml  laser_config.yaml~  package.xml
laserscan/launch/: laser.launch  laser.launch~  launch.launch~
leg_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml~
main/: CMakeLists.txt  CMakeLists.txt~  extract1.launch~  package.xml  package.xml~
squirrel_leg_detector/: package.xml  ppl2dmdl.C00_stumpboost.param_txt
squirrel_leg_detector/include/squirrel_leg_detector/: leg_detector.h  lfeatures.hpp  people2D_engine.hpp
squirrel_leg_detector/launch/: laser.launch~  leg.launch  leg.launch~
squirrel_leg_detector/src/: leg_detector.cpp  leg_detector.cpp~  people2D_engine.cpp
(+36 files in other folders)
