<?xml version="1.0"?>
<package>
  <name>squirrel_leg_detector</name>
  <version>1.0.0</version>
  <description>The squirrel leg detector package, implemeting laser leg detection by Luciano Spinello</description>

  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libgsl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libgsl</run_depend>

</package>
